fix border-spacing not being a valid property

--- a/themes/src/sass/gtk/_common-3.0.scss
+++ b/themes/src/sass/gtk/_common-3.0.scss
@@ -1119,7 +1119,7 @@ dropdown {
 
 	> button > box {
 		border-radius: 0 $modal-radius $modal-radius 0;
-		border-spacing: $space-size;
+		padding: 0 $space-size;
 
 		> stack > row.activatable {
 			&:hover,
