--- a/themes/src/sass/gtk/apps/_gnome-4.0.scss
+++ b/themes/src/sass/gtk/apps/_gnome-4.0.scss
@@ -188,7 +188,7 @@
 #NautilusViewCell {
 	clamp box {
 		margin: 0;
-		border-spacing: 0;
+		padding: 0;
 	}
 }
 
